Fixed z-index swipe gif

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -133,7 +133,7 @@ body {
   right: 0;
   left: 0;
   margin: auto;
-  zIndex: 1;
+  z-index: 1;
   height: 25vh;
   width: auto;
 }
